# Y86sim_reveiw

./: .gitignore  README.md  REVIEW.md
src/: CMakeLists.txt  main.cc
src/programstack/: CMakeLists.txt  argument.cc  argument.h  prgstack.cc  prgstack.h
src/stages/: Decode.cc  Decode.h  Excute.cc  Excute.h  Fetch.cc  Fetch.h  LoadRegister.cc  LoadRegister.h  Memory.cc  Memory.h  Write.cc  Write.h  register.cc  register.h
src/utility/: CMakeLists.txt
